# centaur-benchmark

./: (Updated) Centaur Benchmarks Result Summary.xlsx  .gitignore  LICENSE  MANIFEST.in  README.md  app.js  index.html  pyproject.toml  styles.css
artifacts/: README.md
counselling/: counselling
dashboard/: app.js  index.html  styles.css
docs/: ADDING_A_TASK.md
market trend analysis/: market-trend-analysis
menu planning/: menu-planning.ipynb
notebooks/: 01_run_task.ipynb
operations research/: operations-research
results/: README.md  audit_20260609_stable_frontier_v2.json  audit_20260612_fresh_rep1.json  audit_20260612_fresh_rep2.json  backfill_20260610_scaffold_strict_v4_automation_from_20260609_stable_frontier_v2.json  judge_validation_20260609_stable_frontier_v2.json  judging_notes_20260612_fresh_rep1.md  judging_notes_20260612_fresh_rep2.md
scripts/: audit_all_outputs.py  audit_run.py  backfill_automation_from_run.py  build_dashboard_data.py  build_task_yamls.py  check_replicate_variability.py  compare_rep_runs.py  export_artifacts.py  manual_repair_rep1.py  migrate_notebooks.py  output_quality.py  patch_gemini_scaffolds.py  post_generation.py  probe_automation_max_tokens.py  regen_truncated_automation.py  repair_deepseek_meal_exact_route.py  repair_deepseek_tax_exact_route.py  repair_gpt5_meal_token_probe.py  repair_gpt5_tax_force_openai.py  repair_gpt5_tax_token_probe.py  repair_meal_deepseek_no_cap.py  repair_tail_flagged_outputs.py  rerun_backfilled_automation.py  retry_failed.py  run_automation_only.py  run_full_pipeline.py  run_resumable_batch.py  (+2 more)
(+1710 files in other folders)
