[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "centaur-benchmark"
version = "0.1.0"
description = "Centaur benchmarking: LLM-simulated augmentation vs automation using Expected Parrot (EDSL)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kenny Wongchamcharoen" }]
dependencies = [
  "edsl>=1.0.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
centaur-benchmark = "centaur_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
